hphp/test/slow/object/const/not_on_trait.hhas.expectf
Fatal error: Assembler Error: line 16: interfaces, traits and enums may not be const in %s/not_on_trait.hhas on line -1
